--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -41,13 +45,14 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: orange;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: #242424;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: orange
 }
 button:focus,
 button:focus-visible {
@@ -60,9 +65,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #ffffff;
   }
-  button {
-    background-color: #f9f9f9;
   }
-}
+
