--- a/src/patterns/styleapp.css
+++ b/src/patterns/styleapp.css
@@ -41,6 +41,24 @@ div.buttondiv {
   font-family: 'Courier New', Courier, monospace;
  }
 
+ @media screen and (max-width: 990px)
+ {
+    div.two {
+      height: 300px;
+      h1 {
+        font-size: 1.2em;
+      }
+    }
+    div.buttondiv {
+      gap: 10px;
+      button {
+        width: 50px;
+        height: 50px;
+        font-size: 16px;
+      }
+    }
+ }
+
 
  
  
